--- a/site/index.html
+++ b/site/index.html
@@ -10,5 +10,14 @@
 
 <body>
     
+<header class="menu">
+   <ul class="menu_navegação">
+       <li><a href="">início</a></li>
+       <li><a href="">trabalhos</a></li>
+       <li><a href="">contato</a></li>
+   </ul>
+</header>
+
+
 </body>
 </html>
