--- a/site/index.html
+++ b/site/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laila P. Siqueira</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 </head>
 
 
 
 <body>
-    
-<header class="menu">
-   <ul class="menu_navegação">
-       <li><a href="">início</a></li>
-       <li><a href="">trabalhos</a></li>
-       <li><a href="">contato</a></li>
-</header>
+  
+        
+    <nav class="menu">
+        <ul class="menu_navegação">
+        <li><a href="#">início</a></li>
+        <li><a href="#">trabalhos</a></li>
+        <li><a href="#">contato</a></li>
+    </nav>
 
 
 </body>
